# project-template

./: .devcontainer.json  .env  .gitignore  .npmrc  AGENTS.md  CMakeLists.txt  CMakePresets.json  Cargo.toml  Makefile  Package.swift  README.md  database.sql  flake.nix  package-lock.json  package.json  wrangler.jsonc
.github/workflows/: ci.dockerfile  nix-flake-❄️.yml  nix-flake.yml
.husky/: pre-commit
native/: CMakeLists.txt  CMakePresets.json  greeter.cppm  greeter.test.c++  test.c  test.c++  test.h  test.mm
rust/: Cargo.toml
swift/: Package.resolved  Package.swift
swift/Sources/hello/: main.swift
swift/Sources/project-template/: project_template.swift
swift/Tests/project-templateTests/: SQLiteTests.swift  project_templateTests.swift
swift/nix/: default.nix  workspace-state.json
typescript/: .gitignore  app.json  eslint.config.js  metro.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
typescript/public/: README.md  manifest.json
typescript/src/: electron.ts  server.ts  types.d.ts  util.tsx  worker.ts
typescript/src/__tests__/: api.http
typescript/src/app/: +html.tsx  +middleware.ts  _layout.tsx  index.tsx
typescript/src/app/api/: status+api.ts
typescript/src/app/internal/: index.tsx
typescript/src/components/: parallax-scroll-view.tsx
typescript/src/constants/__tests__/: theme.test.ts
typescript/src/i18n/: index.ts
typescript/src/i18n/locales/: ar.json  de.json  en.json  es.json  fr.json  he.json  la.json  pt.json  ru.json  zh.json
typescript/src/redux/: store.ts
typescript/src/redux/state/: apiSlice.ts
typescript/src/server/: db.ts
